Spacing fix

--- a/portfolio.css
+++ b/portfolio.css
@@ -138,10 +138,8 @@ svg {
 	transition: all 0.5s;
 	-webkit-transition: all 0.5s;
 }
-.fp-viewing-hello > .hello {
-	font-size: 2em;
-	margin-bottom: 30px;
-	line-height: 2.8em;
+.fp-viewing-hello #myname {
+	margin-bottom: 35px;
 }
 .hello {
 	font-size: 1.5em;
